# Canadian-Trails-Parks-RAG-System

./: .gitignore  Dockerfile  MLOPS-RAG.txt  README.md  app.ipynb  app.py  dataIngestion.ipynb  evaluation.ipynb  evaluation_report_20260107_190903.txt  evaluation_report_20260111_120826.txt  evaluation_report_20260111_123316.txt  pipeline.ipynb  pipeline.py  pyproject.toml  requirements.txt
scripts/: alltrails.py  built_city_mapping.py  combine_canada_data.py  parks_canada.py
